@@ -1,3 +1,14 @@
+Tue May  1 17:28:14 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* unix/glob.c (glob, glob3): Avoid the use of mbrtowc.  Fixes bug 231.
+
+Tue May  1 16:03:56 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* sys/exec.c (execve): Add checks for alias-disabling prefix. Fixes bug
+	232.
+	Fix DEBUG build.  Add missing test for __riscosify_std failure.
+	* test/stdlib/system-alias.c: Added.
+
 Sat Apr 28 19:02:48 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* incl-local/dirent.h (struct __dir_stream): Made dd_name_can const
